update popup info

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -5,8 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Czech Post Address Filler Extension</title>
   </head>
-  <body>
-    <textarea id="address-input"></textarea>
+  <body style="background-color: #fff7e0; text-align: center">
+    <img src="../res/icon128.png" style="margin: 5px" />
+
+    <textarea id="address-input" style="margin: 5px"></textarea>
+
+    <p>
+      This extension was created by
+      <a href="https://matejvi.cz/" target="_blank">Matěj Voslař</a>.
+    </p>
+    <p>
+      Source code is available on
+      <a
+        href="https://github.com/msamyel/czech-post-address-filler"
+        target="_blank"
+        >GitHub</a
+      >.
+    </p>
+
+    <p>
+      <b>Disclaimer:</b> Not all address formats are supported. Use the
+      extension at your own risk.
+    </p>
 
     <script src="popup.js"></script>
   </body>
